tests/grammar/types/args/schema_types_err_too_many_args_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:4:34
  |
4 | schema_in_main_k = SchemaInMainK(msg='I am the instance of SchemaInMainK')
  |                                  ^ "SchemaInMainK" got an unexpected keyword argument 'msg'
  |